RESOLVED FIXED305417
Fixed unretained local variable warnings in Tools/DumpRenderTree and Tools/**
https://bugs.webkit.org/show_bug.cgi?id=305417
Summary Fixed unretained local variable warnings in Tools/DumpRenderTree and Tools/**
Geoffrey Garen
Reported 2026-01-13 13:28:52 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-13 13:28:59 PST
Geoffrey Garen
Comment 2 2026-01-13 13:30:13 PST
EWS
Comment 3 2026-01-13 15:45:10 PST
Committed 305547@main (3d99a6b32a4a): <https://commits.webkit.org/305547@main> Reviewed commits have been landed. Closing PR #56515 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.