Fixed unretained local variable warnings in Tools/DumpRenderTree and Tools/** https://bugs.webkit.org/show_bug.cgi?id=305417 rdar://168090269

Reviewed by Ryosuke Niwa.

Mechanical changes dictated by the SaferCPP bot.

Canonical link: https://commits.webkit.org/305547@main