Tools/DumpRenderTree/mac/DumpRenderTree.mm
@@ -912,7 +912,7 @@ static void setDefaultsToConsistentValuesForTesting()
     static const int NoFontSmoothing = 0;
     static const int BlueTintedAppearance = 1;
 
-    NSString *libraryPath = libraryPathForDumpRenderTree();
+    RetainPtr libraryPath = libraryPathForDumpRenderTree();
 
     NSDictionary *dict = @{
         @"AppleKeyboardUIMode": @1,
@@ -951,10 +951,10 @@ static void setDefaultsToConsistentValuesForTesting()
     [[NSUserDefaults standardUserDefaults] setValuesForKeysWithDictionary:dict];
 
     NSDictionary *processInstanceDefaults = @{
-        WebDatabaseDirectoryDefaultsKey: [libraryPath stringByAppendingPathComponent:@"Databases"],
-        WebStorageDirectoryDefaultsKey: [libraryPath stringByAppendingPathComponent:@"LocalStorage"],
-        WebKitLocalCacheDefaultsKey: [libraryPath stringByAppendingPathComponent:@"LocalCache"],
-        WebKitResourceLoadStatisticsDirectoryDefaultsKey: [libraryPath stringByAppendingPathComponent:@"LocalStorage"],
+        WebDatabaseDirectoryDefaultsKey: [libraryPath.get() stringByAppendingPathComponent:@"Databases"],
+        WebStorageDirectoryDefaultsKey: [libraryPath.get() stringByAppendingPathComponent:@"LocalStorage"],
+        WebKitLocalCacheDefaultsKey: [libraryPath.get() stringByAppendingPathComponent:@"LocalCache"],
+        WebKitResourceLoadStatisticsDirectoryDefaultsKey: [libraryPath.get() stringByAppendingPathComponent:@"LocalStorage"],
     };
 
     [[NSUserDefaults standardUserDefaults] setVolatileDomain:processInstanceDefaults forName:NSArgumentDomain];
@@ -1622,7 +1622,7 @@ void dump()
 
     if (dumpTree) {
         RetainPtr<NSString> resultString;
-        NSData *resultData = nil;
+        RetainPtr<NSData> resultData;
         NSString *resultMimeType = @"text/plain";
 
         if ([[[mainFrame dataSource] _responseMIMEType] isEqualToString:@"text/plain"]) {
@@ -1659,10 +1659,10 @@ void dump()
         printf("DumpMalloc: %li\n", mallocStats.committedVMBytes);
 
         if (gTestRunner->dumpAsAudio())
-            printf("Content-Length: %lu\n", static_cast<unsigned long>([resultData length]));
+            printf("Content-Length: %lu\n", static_cast<unsigned long>([resultData.get() length]));
 
         if (resultData) {
-            fwrite([resultData bytes], 1, [resultData length], stdout);
+            fwrite([resultData.get() bytes], 1, [resultData.get() length], stdout);
 
             if (!gTestRunner->dumpAsText() && !gTestRunner->dumpDOMAsWebArchive() && !gTestRunner->dumpSourceAsWebArchive() && !gTestRunner->dumpAsAudio())
                 dumpFrameScrollPosition(mainFrame);
@@ -1903,7 +1903,7 @@ static void runTest(const std::string& inputLine)
     }
 
     NSString *testPath;
-    NSURL *url = computeTestURL(pathOrURLString, &testPath);
+    RetainPtr url = computeTestURL(pathOrURLString, &testPath);
     if (!url) {
         fprintf(stderr, "Failed to parse \"%s\" as a URL\n", pathOrURL.c_str());
         return;
@@ -1913,16 +1913,16 @@ static void runTest(const std::string& inputLine)
     // so we can emit a cleaner error message than we can otherwise from the resource loader delegate.
     if (!gUsingServerMode) {
         NSError *error = nil;
-        if (url.fileURL && ![url checkResourceIsReachableAndReturnError:&error]) {
+        if (url.get().fileURL && ![url.get() checkResourceIsReachableAndReturnError:&error]) {
             fprintf(stderr, "Failed: %s\n", error.localizedDescription.UTF8String);
             return;
         }
 
-        resourceLoadDelegate().get().mainResourceURL = [url _webkit_canonicalize_with_wtf];
+        resourceLoadDelegate().get().mainResourceURL = [url.get() _webkit_canonicalize_with_wtf];
     }
 
     if (!testPath)
-        testPath = [url absoluteString];
+        testPath = [url.get() absoluteString];
 
     auto message = makeString("CRASHING TEST: "_s, testPath);
     WTF::setCrashLogMessage(message.utf8().data());
@@ -1934,7 +1934,7 @@ static void runTest(const std::string& inputLine)
 
     mainFrameTestOptions = options;
 
-    const char* testURL([[url absoluteString] UTF8String]);
+    const char* testURL([[url.get() absoluteString] UTF8String]);
     gTestRunner = TestRunner::create(testURL, command.expectedPixelHash);
     gTestRunner->setAllowAnyHTTPSCertificateForAllowedHosts(allowAnyHTTPSCertificateForAllowedHosts);
     gTestRunner->setAllowedHosts(allowedHosts);
@@ -2010,7 +2010,7 @@ static void runTest(const std::string& inputLine)
     workQueue.setFrozen(false);
 
     @autoreleasepool {
-        [mainFrame loadRequest:[NSURLRequest requestWithURL:url]];
+        [mainFrame loadRequest:[NSURLRequest requestWithURL:url.get()]];
     }
 
     while (!done) {
